--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,17 @@
 spring:
+  main:
+    banner-mode: "off"
   datasource:
-    driver-class-name: org.hsqldb.jdbc.JDBCDriver
-    url: jdbc:hsqldb:hsql://localhost/mydb
-    username: SA
-    password:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/test-db
+    username: test
+    password: test@123
   jpa:
     show-sql: false
     hibernate.ddl-auto: create-drop
     properties.hibernate.temp.use_jdbc_metadata_defaults: false
-    database-platform: org.hibernate.dialect.HSQLDialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
+jwttoken.secret: mysecretkey
+# in milliseconds (5 mins)
+jwttoken.expiration: 300000
