--- a/ui/package.json
+++ b/ui/package.json
@@ -1,26 +1,39 @@
 {
-  "name": "project89-ui",
+  "name": "ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^5.0.1",
-    "chart.js": "^3.6.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "bootstrap": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-bootstrap-icons": "^1.5.0",
-    "react-bootstrap-v5": "^1.4.0",
-    "react-chartjs-2": "^3.3.0",
+    "react-bootstrap": "^2.0.2",
+    "react-bootstrap-icons": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-google-charts": "^3.0.15",
+    "react-router-dom": "^6.0.2",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
